changed color to fix visibility issues

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
   min-height: 100vh;
   width: 100%;
   position: relative;
-  background-image: url("./img/bg-2.png");
+  background-image: url("./img/bg-3.png");
   background-size: cover;
   padding: 90px 0px 100px;
   background-position:center right ;
@@ -77,7 +77,7 @@ box-shadow: 0 10px 20px rgba(169, 196, 163, 0.2);
 }
 
 .btn-white {
-background-color: rgb(141, 168, 106);
+background-color: rgb(233, 236, 229);
 color: #777;
 }
 
@@ -100,7 +100,7 @@ opacity: 0;
 }
 
 .main-banner-section .text p {
-  color: darkslategray;
+  color: rgb(232, 240, 240);
   text-align: justify;
   font-size: 18px;
 }
@@ -111,10 +111,13 @@ p, .text {
 }
 
 .sec-title.light .title, .sec-title.light h2 {
-  color: darkslategray;
+  color: rgb(228, 238, 238);
   animation: moveInRight 1.3s ease-out;
 }
 
+label{
+  color: #fff;
+}
 
 
 
